feat(STOCK-5) added many logic for Влад = Vlad = Dkfl